--- a/src/style.css
+++ b/src/style.css
@@ -71,13 +71,6 @@ body {
     padding: 5px;
 }
 
-#bontonBuscar {
-    margin: 10px 10px 10px 20px;
-    width: 100px;
-    height: 20px;
-    font-size: 15px;
-    padding: 5px;
-}
 
 /* ---- Espacio que contiene todas las tarjetas ---- */
 #contenedorPadre {
@@ -205,7 +198,7 @@ footer {
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
-.general{
+/*.general{
     align-content: center;
     border-radius: 20px;
     background: url(./imagenes/pokemon-estrellas.png);
@@ -222,4 +215,64 @@ footer {
     padding: 18px;  
 }
   
-  
+ /*Boton */
+ #myBoton{
+    margin: 10px 10px 10px 20px;
+    width: 100px;
+    height: 20px;
+    font-size: 15px;
+    padding: 5px;
+ }
+
+ /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+ /*.grow{
+    transition: all .2s ease-in-out;
+ }
+ .grow:hover{
+    transform: scale(1.1);
+ }
+  /* .inicio{
+    background-color: #1c7bce;
+    color: white;
+    padding: 13px;
+    font-size: 13px;
+    border-radius: 10px;
+    }*/
+ 
+ 
