--- a/src/style.css
+++ b/src/style.css
@@ -51,8 +51,18 @@ body {
     height: 45px;
     margin: 3% 4%;
 }
-/*Dropdown Content (Hidden by Default) */
-.dropdown-content {
+
+/* Botón Ordenas A-Z Z-A */
+.ordenbtn {
+  display: flex;
+  background-color:rgb(0, 4, 255);
+  color: white;
+  padding: 13px;
+  font-size: 13px;
+  border-radius: 10px;
+  margin: 10% 10px 10px 15px;
+}
+.orden-content {
   display: none;
   position: absolute;
   background-color: #f1f1f1;
@@ -61,8 +71,7 @@ body {
   z-index: 1;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
+.orden-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
@@ -70,18 +79,15 @@ body {
   font-size: 13px;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
+.orden-content a:hover {
   background-color: #ddd;
 }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+.ordenado:hover .orden-content {
   display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
+.ordenado:hover .ordenbtn {
   background-color:rgb(52, 85, 186);
 }
 /* --- Buscador por tipo ---*/
@@ -96,53 +102,6 @@ body {
   justify-content: center;
   display: flex;
   margin: 10%;
-}
-
-.menu-container {
-  max-width: 1100px;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding: 0em 0em 2em 0em;
-}
-
-.all-pokemon {
-  font-family: 'Lato', sans-serif;
-  border: none;
-  outline: 0;
-  background-color: #84d89b;
-  border-radius: 0.4em;
-  padding: 0.3em 2em;
-  font-size: 1em;
-}
-
-.all-pokemon:hover {
-  background-color: #35867d;
-  color: #ffffff;
-  transition: background-color 0.5s ease-out;
-  outline: 0;
-}
-
-.menu-container div button {
-  padding: 1em 1em 0em 1em;
-}
-
-.menu-container select {
-  background-color: #ffffff;
-  padding: 0.2em;
-  width: 9em;
-  border-radius: 0.4em;
-  outline: 0;
-}
-
-.menu-container option {
-  font-family: 'Lato', sans-serif;
-}
-
-.menu-container label {
-  padding: 0em 0.5em;
 }
 
 /* ---- Atrápalos ya ---- */
@@ -170,16 +129,7 @@ body {
   text-align: center;
   padding: 5px;
 }
-/* Botón Ordenas A-Z Z-A */
-.dropbtn {
-  display: flex;
-  background-color:rgb(0, 4, 255);
-  color: white;
-  padding: 13px;
-  font-size: 13px;
-  border-radius: 10px;
-  margin: 10% 10px 10px 15px;
-}
+
 
 /* ---- Espacio que contiene todas las tarjetas ---- */
 #contenedorPadre {
@@ -223,15 +173,6 @@ html {
   scroll-behavior: smooth;
 }
 
-.container {
-  width: 100%;
-  max-width: 1200px;
-  padding: 20px;
-  margin: 0 auto;
-  box-sizing: border-box;
-  text-align: justify;
-}
-
 .btn-scrolltop {
   position: fixed;
   bottom: 20px;
@@ -258,56 +199,6 @@ footer {
   margin-top: 50px;
   width: 100%;
   text-align: center;
-}
-
-/*Boton Modal */
-
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 1;
-  /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0);
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
 
 * {
