--- a/style.css
+++ b/style.css
@@ -1,158 +1,206 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background: url(./imagenes/fondo.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed
+  background: url(./imagenes/fondo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed
 }
 
 .encabezadoPadre {
-
-    display: flex;
-    /*background: blue;*/
-    width: 100%;
-    height: auto;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  /*background: blue;*/
+  width: 100%;
+  height: auto;
+  flex-wrap: wrap;
 }
 
-/*.cabecera {
-    background: white;
-    display: flex;
-    margin: ;
-    padding: 1em;
-    float: left;
-}*/
-
 #logo {
-    width: 18%;
-    height: auto;
-    position: sticky;
-    align-content: center;
-    display: flex;
-    padding: 1%;
-    margin-left: 5%;
+  width: 20%;
+  height: auto;
+  position: sticky;
+  align-content: center;
+  display: flex;
+  margin-left: 5%;
 }
 
 #pikachu {
+  display: flex;
+  width: 15%;
+  height: auto;
+  margin-left: 5%;
+  padding: 0%;
+}
+
+#botones {
+  display: flex;
+
+}
+#home{
+  background-color: rgb(0, 4, 255);
+    color: white;
+    padding: 13px;
+    font-size: 13px;
+    border-radius: 10px;
     display: flex;
-    width: 15%;
-    height: auto;
-    margin: 0%;
-    padding: 0%;
+    width: 75px;
+    height: 45px;
+    margin: 3% 4%;
 }
 
-/*#filtrar{
-    font-size: 32px;
-    font-weight: bold;
-    color: #fff;
-    background-color: blue;
-    align-content:flex-end;
+/* Botón Ordenas A-Z Z-A */
+.ordenbtn {
+  display: flex;
+  background-color:rgb(0, 4, 255);
+  color: white;
+  padding: 13px;
+  font-size: 13px;
+  border-radius: 10px;
+  margin: 10% 10px 10px 15px;
 }
-*/
+.orden-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 120px;
+  /*box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);*/
+  z-index: 1;
+}
 
+.orden-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-size: 13px;
+}
+
+.orden-content a:hover {
+  background-color: #ddd;
+}
+
+.ordenado:hover .orden-content {
+  display: block;
+}
+
+.ordenado:hover .ordenbtn {
+  background-color:rgb(52, 85, 186);
+}
+/* --- Buscador por tipo ---*/
+#tipo {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  display: flex;
+  margin: 10% 2%;
+}
+#filtroTipo{
+  justify-content: center;
+  display: flex;
+  margin: 10%;
+}
+
+/* ---- Atrápalos ya ---- */
 #sloganid {
-    width: 40%;
-    display: block;
-    align-items: center;
-    margin: auto;
-    padding-top: 2%;
+  display: flex;
+  width: 40%;
+  display: block;
+  align-items: center;
+  margin: auto;
+  padding-top: 3%;
+}
+/* ---- Buscador por nombre y su botón ---- */
+.searcher {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+#search {
+  width: 200px;
+  font-size: 15px;
+  border-radius: 0.4em;
+  border: solid 3px rgb(0, 4, 255);
+  background-color: #ffffff;
+  text-align: center;
+  padding: 5px;
+}
 
 
+/* ---- Espacio que contiene todas las tarjetas ---- */
+#contenedorPadre {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  overflow: auto;
+  align-items: center;
 }
 
 #cont-card {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto;
-    margin-top: 0%;
-    position: relative;
-     /*background-color: rgba(166, 74, 16, 0.9);
-    overflow: auto;
-    padding: 2%;
-    overflow-y: scroll;*/
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  justify-content: center;
 }
-
-    /*#card:hover {
-    background-color:  rgb(247, 249, 252); 
-}*/
 
 #card {
-    border-radius: 20px;
-    background-image: url(./imagenes/pokemon-estrellas.png);
-    background-size:cover;
-    box-shadow: 5px 5px 10px #92f1fc;
-    margin: 40px;
-    padding: 20px;
-    text-align: center;
-    flex-wrap: wrap;
-    width: 70%;
-    height: 80%;
-    justify-content: space-evenly;
-    text-transform: capitalize;
-    font-family: Arial, Helvetica, sans-serif, bold;
-    font-size: 20px;
-    color: whitesmoke;
-    /*overflow-y: scroll;
-    font-size: 30px;*/
+  align-content: center;
+  border-radius: 20px;
+  background: url(./imagenes/pokemon-estrellas.png);
+  box-shadow: 5px 5px 15px #60d8e1;
+  margin: 50px;
+  text-align: center;
+  flex-wrap: wrap;
+  width: 170px;
+  height: 250px;
+  text-transform: capitalize;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  justify-content: center;
+  padding: 18px;
 }
 
-.solucion {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction:row;
-    flex-grow: 1;
-    width: 80%;
-    height: auto;
-    justify-content: center;
-    padding: 1%;
-    /*background-color: aqua, 0.9;
-    margin-top: 15%;
-    overflow-y: scroll;*/
+/* ---- Scroll ---- */
+html {
+  scroll-behavior: smooth;
 }
-/*.detalle {
-    display: flex;
-}*/
 
-/*#circulo {
-    display: flex;
-    background-color: rgba(255, 255, 255);
-    box-shadow: 5px 5px 10px #89d3e6;
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    position: absolute;
-    z-index: 1;
-    align-items: center;
-    justify-content: center;
+.btn-scrolltop {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 15px 20px;
+  background: rgb(0, 4, 255);
+  color: white;
+  border: 1px solid white;
+  border-radius: 100%;
+  cursor: pointer;
+  transform: translateY(100px);
+  transition: 0.3s;
+}
 
-}*/
+.btn-scrolltop-on {
+  transform: translateY(0);
+}
 
-/*.img {
-    width: 150px;
-    height: auto;
-    position: relative;
-    z-index: 2;
-}*/
-
+/* ---- Footer ----*/
 footer {
-    background-color: black;
-    color: #fff;
-    padding: 2% 2% 2% 2%;
-    margin-top: 50px;
-    width: 100%;
-    text-align: center;
+  background-color: black;
+  color: #fff;
+  padding: 2% 2% 2% 2%;
+  margin-top: 50px;
+  width: 100%;
+  text-align: center;
 }
 
-
-/*PARA LOS BOTONES:
-   Podemos usar:
-   .id.active{
-    background-color: #fff; esto lo que hace es que la dar clic cambia de color
-    https://www.youtube.com/watch?v=yc1bCB689bE&list=PLhSj3UTs2_yU0fGoS1bjpHqky4kCEmTbR&index=9
-   }
-/*
+* {
+  font-family: 'Lato', sans-serif;
+}
